[package]
name = "aoc16"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
util = {path = "../util"}
regex = {workspace = true}
itertools = {workspace = true}
lazy_static = {workspace = true}
md5 = {workspace = true}
rayon = {workspace = true}