[package]
name = "aoc23"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
util = {path = "../util"}
lazy_static = {workspace = true}
regex = {workspace = true}
fancy-regex = {workspace = true}
rayon = {workspace = true}
itertools = {workspace = true}
num = {workspace = true}