[package]
name = "dlin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.12", features = ["json", "cookies"] }
tokio = { version = "1.12.0", features = ["full"] } 
dotenv = "0.15.0"