[package]
name = "util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.20"}
tokio = { version = "1.13.0", features = ["macros", "rt-multi-thread"] } 
dotenv = "0.15.0"
num-traits = {workspace = true}